# Famil

./: .gitignore  CMakeLists.txt  README.md  famil.cpp
inc/: Button.h  CMakeLists.txt  Game.h  Question.h  RoundManager.h  Team.h  UI.h  famil_types.h
resources/: pytania.json
source/: Button.cpp  CMakeLists.txt  Game.cpp  Question.cpp  RoundManager.cpp  Team.cpp  UI.cpp
